# phys-torch

./: README.md  hello.py  main.py  pyproject.toml
.github/workflows/: mypy.yml  tests.yaml  tests.yml
examples/: example.ipynb
phys_torch/: __init__.py
tests/: test_phystorch.py
